# claw-pixel-town

./: .gitignore  Cargo.toml  LICENSE  README.md  README.zh-CN.md  config.example.toml
config/: config.toml
crates/pixel-town-core/: Cargo.toml
crates/pixel-town-core/src/: db.rs  game_logic.rs  lib.rs  migrations.rs  state_machine.rs  types.rs
crates/pixel-town-server/: Cargo.toml
crates/pixel-town-server/src/: background.rs  channel_routes.rs  config.rs  events.rs  game_routes.rs  main.rs  oauth_routes.rs  routes.rs
crates/star-office-core/: Cargo.toml
crates/star-office-core/src/: db.rs  lib.rs  migrations.rs  types.rs
crates/star-office-server/: Cargo.toml
crates/star-office-server/src/: channel_routes.rs  config.rs  events.rs  main.rs  oauth_routes.rs  routes.rs
docs/: DEPLOYMENT.md  ROADMAP.md  nginx.conf.example  star-office-rust-mvp.md
migrations/: 001_init.sql  002_channels.sql  003_thumbnails.sql  004_github_oauth.sql  005_games.sql  006_game_timeout.sql  007_bot_aliases.sql
scripts/: generate_town.py  mock-agents.sh  seed.sh  test-emoji.sh  test-remote.sh  test-rps-game.sh
skills/claw-pixel-town/: SKILL.md
skills/claws-pixel-town/: SKILL.md
static/: index.html
static/assets/: index-467Ud3Nt.js  index-BAAw3zbV.js  index-BKZOByYL.js  index-BrEPM-ax.js  index-C8_64L9o.js  index-CTQvdY1g.css  index-CmQ05rYK.js  index-Co49VRX7.js  index-CxQX-D6N.js  index-D2mu8BJc.js  index-D9g86WxD.js  index-DgAqo1Sg.js  index-DghMVuiT.js  index-DznlB5nz.js  index-hGOKQp0Q.css  index-iJtz62F-.js  index-iehAsPL4.js
static/assets/furniture/: furniture-catalog.json
static/assets/maps/: agent-town.json
webview-ui/: .gitignore  index.html  package.json  vite.config.ts
webview-ui/src/: App.tsx  vscodeApi.ts
webview-ui/src/components/: ActivityFeed.tsx  AgentNameLabels.tsx  AgentPanel.tsx  ChannelSettingsModal.tsx  EmojiBubbles.tsx  JokeDanmaku.tsx  VersionInfo.tsx
webview-ui/src/components/games/: GameOverlay.tsx  Leaderboard.tsx  RpsGameView.tsx  index.ts
webview-ui/src/hooks/: useApiPolling.ts  useAuth.ts  useChannelApi.ts  useChannelSSE.ts  useGameApi.ts  useTownPolling.ts
webview-ui/src/lobby/: BotManagement.tsx  ChannelCard.tsx  CreateChannelModal.tsx  JoinKeyModal.tsx  LobbyView.tsx  UserProfile.tsx  index.ts
webview-ui/src/office/: types.ts
webview-ui/src/office/components/: OfficeCanvas.tsx
webview-ui/src/office/layout/: assetLoader.ts
webview-ui/src/town/: TownCanvas.tsx  TownRenderer.ts  TownState.ts  index.ts  types.ts
