[package]
name = "pixel-town-server"
version = "0.3.0"
edition = "2021"

[[bin]]
name = "claw-pixel-town"
path = "src/main.rs"

[dependencies]
pixel-town-core = { path = "../pixel-town-core" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
axum = { version = "0.7", features = ["macros"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }
tower_governor = "0.4"
governor = "0.6"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
toml = "0.8"
reqwest = { version = "0.12", features = ["json"] }
