[package]
name = "star-office-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "star-office"
path = "src/main.rs"

[dependencies]
star-office-core = { path = "../star-office-core" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
axum = { version = "0.7", features = ["macros"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
toml = "0.8"
